Bug 21116 - [4.1 Regression] tree-ssa-phiopt.c:193 has wrong translation from EDGE_COUNT to single_succ_p.
Summary: [4.1 Regression] tree-ssa-phiopt.c:193 has wrong translation from EDGE_COUNT ...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.1.0
Assignee: Kazu Hirata
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-04-19 22:53 UTC by Kazu Hirata
Modified: 2005-07-23 22:49 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kazu Hirata 2005-04-19 22:53:33 UTC
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree-ssa-phiopt.c.diff?r1=2.25&r2=2.26&only_with_tag=MAIN

-      if (EDGE_COUNT (bb1->succs) > 1
+      if (!single_succ_p (bb1) > 1

We don't need "> 1".
Comment 1 Andrew Pinski 2005-04-19 23:28:06 UTC
This is a regression.
Comment 2 GCC Commits 2005-04-20 13:19:36 UTC
Subject: Bug 21116

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	kazu@gcc.gnu.org	2005-04-20 13:19:18

Modified files:
	gcc            : ChangeLog tree-ssa-phiopt.c 

Log message:
	PR tree-optimization/21116
	* tree-ssa-phiopt.c: Fix a typo.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.8371&r2=2.8372
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree-ssa-phiopt.c.diff?cvsroot=gcc&r1=2.34&r2=2.35

Comment 3 Kazu Hirata 2005-04-20 13:20:53 UTC
Just checked in a patch.