	PR tree-optimization/21116 	* tree-ssa-phiopt.c: Fix a typo.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@98457 138bc75d-0d04-0410-961f-82ee72b054a4